initial updates to portfolio page

--- a/index.html
+++ b/index.html
@@ -1,27 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href=".assets/css/styles.css">
+    <link rel="stylesheet"  href="./assets/css/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>figure out what is going on </title>
+    <title>Portfolio of Tiffany Deakin</title>
 </head>
+
 <body>
-    <header>
-            <h1>something</h1>
-    </header>
-    <section>
+    <nav id="navbar">
         <ul>
-            <li><strong> do something else</strong></li>
-            
-
-
+            <li>
+                <a href="#home">Home</a>
+            </li>
+            <li>
+                <a href="#aboutMe">About Me</a>
+            </li>
+            <li>
+                <a href="#portfolio">Portfolio</a>
+            </li>
+            <li>
+                <a href="#contactMe">Contact Me</a>
+            </li>
         </ul>
 
 
+    </nav>
+
+    <header class="background-image">
+        <h1 id="home">Tiffany Deakin</h1>
+    </header>
+
+    <section>
+        <ul>
+            <li><strong>Hi. I'm Tiffany Deakin and I'm learning to be a web developer. 
+                If you're reading this now, you'll see that I'm most certainly still learning. 
+                However, if you check back in a few months, you'll see a lot of growth and progress... and much better code than you see now.
+            </strong></li>
+         </ul>
+    </section>
+
+<!-- about me -->
+    <section> 
+        <h2 id="aboutMe">About Me</h2>
+        <p>I was born and raised in central Illinois on a small diversified crop and livestock farm. After high school, I attended the University of Illinois at Urbana-Champaign. After graduation, I took an involved role in my family's small business, <em>The Banner Sheep Magazine</em>, which is as it sounds, a magazine about sheep. We also manage a livestock auction company, and pre-COVID, designed websites for farmers. In taking this web development course, my aim is to apply knowledge and skills I learn to real life applications in my business.</p>
 
     </section>
 
+<!-- portfolio -->
+    <section> 
+        <h2 id="portfolio">Portfolio</h2>
+
+    </section>
+
+<!-- Contact Me -->
+    <section> 
+        <h2 id="contactMe">Contact Me</h2>
+    
+    </section>
 </body>
 </html>
