added image + navbar work

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <nav id="navbar">
+    <nav>
         <ul>
             <li>
                 <a href="#home">Home</a>
@@ -28,17 +28,18 @@
 
     </nav>
 
-    <header class="background-image">
+    <header>
         <h1 id="home">Tiffany Deakin</h1>
+        <img src="assets/images/td.jpg" alt="Image of Tiffany Deakin">
     </header>
 
     <section>
-        <ul>
-            <li><strong>Hi. I'm Tiffany Deakin and I'm learning to be a web developer. 
+        <p>
+            <strong>Hi. I'm Tiffany Deakin and I'm learning to be a web developer. 
                 If you're reading this now, you'll see that I'm most certainly still learning. 
                 However, if you check back in a few months, you'll see a lot of growth and progress... and much better code than you see now.
-            </strong></li>
-         </ul>
+            </strong>
+        </p>
     </section>
 
 <!-- about me -->
