added applications and more formatting

--- a/index.html
+++ b/index.html
@@ -45,20 +45,43 @@
 <!-- about me -->
     <section> 
         <h2 id="aboutMe">About Me</h2>
-        <p>I was born and raised in central Illinois on a small diversified crop and livestock farm. After high school, I attended the University of Illinois at Urbana-Champaign. After graduation, I took an involved role in my family's small business, <em>The Banner Sheep Magazine</em>, which is as it sounds, a magazine about sheep. We also manage a livestock auction company, and pre-COVID, designed websites for farmers. In taking this web development course, my aim is to apply knowledge and skills I learn to real life applications in my business.</p>
-
-    </section>
+        <p>I was born and raised in central Illinois on a small diversified crop and livestock farm. Following high school, I attended the University of Illinois at Urbana-Champaign. After graduation from U of I, I took an involved role in my family's small business, <em>The Banner Sheep Magazine</em>, which is as it sounds, a magazine about sheep. We also manage a livestock auction company, and pre-COVID, designed websites for farmers. In taking this web development course, my aim is to apply knowledge and skills I learn to real life applications in my business.</p>
+        </section>
 
 <!-- portfolio -->
-    <section> 
+  
         <h2 id="portfolio">Portfolio</h2>
-
+    <section class="portfolio"> 
+            <section class="work-samples-rps">
+                Rock, Paper, Scissors!
+                <a href="https://tdeakin93.github.io/rockpaperscissors/">
+                <img src="assets/images/work1-rps.JPG" class="sample-image">
+                </a>
+            </section>
+            <section class="work-samples">
+                Coming soon!
+                <img src="assets/images/coming-soon.png">
+            </section>
+            <section class="work-samples">
+                Coming soon!
+                <img src="assets/images/coming-soon.png">
+            </section>
+            <section class="work-samples"
+                >Coming soon!
+                <img src="assets/images/coming-soon.png">
+            </section>
     </section>
 
 <!-- Contact Me -->
     <section> 
         <h2 id="contactMe">Contact Me</h2>
-    
+        <p>Phone: 1-555-555-5555</p>
+        <p><a href="mailto:notputtingmyinfooutthereyet@nomail.com"> Email: notputtingmyinfooutthereyet@nomail.com</a>
+        </p>
     </section>
+
+    <footer>
+       <h3> - td - </h3>
+    </footer>
 </body>
 </html>
