--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This serves as a glimpse into the web development skills Tiffany Deakin has to offer." />
     <title>Portfolio of Tiffany Deakin</title>
 </head>
 
@@ -55,20 +56,20 @@
             <section class="work-samples-rps">
                 Rock, Paper, Scissors!
                 <a href="https://tdeakin93.github.io/rockpaperscissors/">
-                <img src="assets/images/work1-rps.JPG" class="sample-image">
+                <img src="assets/images/work1-rps.JPG" alt="image of rock paper scissors application" class="sample-image">
                 </a>
             </section>
             <section class="work-samples">
                 Coming soon!
-                <img src="assets/images/coming-soon.png">
+                <img src="assets/images/coming-soon.png" alt="text box reads coming soon!">
             </section>
             <section class="work-samples">
                 Coming soon!
-                <img src="assets/images/coming-soon.png">
+                <img src="assets/images/coming-soon.png" alt="text box reads coming soon!">
             </section>
             <section class="work-samples"
                 >Coming soon!
-                <img src="assets/images/coming-soon.png">
+                <img src="assets/images/coming-soon.png" alt="text box reads coming soon!">
             </section>
     </section>
 
